<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radial_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shashi.android.androidutility.MainActivity"
    tools:ignore="MergeRootFrame" >

     <com.google.ads.AdView
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         ads:adSize="BANNER"
         ads:adUnitId="@string/ad_unit_id"
         ads:testDevices="FF6E7E12F5BCB7838DAC43CB4C099358"
         ads:loadAdOnCreate="true" />

     <RadioGroup
         android:id="@+id/radioGroup1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/adView"
         android:layout_alignParentTop="true"
         android:orientation="vertical" >

         <RadioButton
             android:id="@+id/radio0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:text="@string/temperature"
             android:textColor="#151B54" />

         <View
             style="@style/Divider"
             android:layout_width="wrap_content"
             android:minWidth="1dp" />

         <RadioButton
             android:id="@+id/radio1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/length"
             android:textColor="#151B54" />

         <View style="@style/Divider" />

         <RadioButton
             android:id="@+id/radio2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/storage"
             android:textColor="#151B54" />

         <View style="@style/Divider" />
         
           <RadioButton
             android:id="@+id/radio3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/area"
             android:textColor="#151B54" />
         <View style="@style/Divider" />
         <RadioButton
             android:id="@+id/radio4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/speed"
             android:textColor="#151B54" />
         
         <View style="@style/Divider" />
           <RadioButton
             android:id="@+id/radio5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/mass"
             android:textColor="#151B54" />
         
         <View style="@style/Divider" />
     
     
     </RadioGroup>

 

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@+id/radioGroup1"
          android:layout_centerHorizontal="true"
          android:gravity="center_vertical|center_horizontal"
          android:minHeight="50dip"
          android:minWidth="100dip"
          android:onClick="onClick"
          android:text="@string/convert"
          android:textColor="#FFFFFF" />

           <Button
               android:id="@+id/button2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_alignLeft="@+id/adView"
               android:layout_below="@+id/button1"
               android:layout_marginTop="20dp"
               android:background="#FFFFFF"
               android:gravity="left"
               android:minHeight="10dip"
               android:minWidth="10dip"
               android:onClick="onClick"
               android:text="@string/convert_trail"
               android:textColor="#4863A0"
               android:textSize="18sp"
               android:textStyle="bold" />
     
</RelativeLayout>