<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/container2"
	android:background="@drawable/radial_background"
    tools:context="com.shashi.android.androidutility.MainActivity3" 
    tools:ignore="MergeRootFrame"
     >
     <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             >

            <EditText
                android:id="@+id/editText1"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:layout_gravity="left" 
                android:inputType="numberSigned|numberDecimal"
                android:textColor="#FFFFFF">

                <requestFocus />
            </EditText>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:textColor="#FFFFFF" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            >

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
           >
            
         <EditText
                android:id="@+id/editText2"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:layout_gravity="left" 
                android:clickable="false" 
        		android:cursorVisible="false" 
        		android:focusable="false" 
        		android:focusableInTouchMode="false"
        		android:textColor="#FFFFFF">
            </EditText>

          <TextView
              android:id="@+id/TextView1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="bottom|left"
              android:layout_marginLeft="10dp"
              android:ems="5"
              android:text="@string/celsius"
              android:textColor="#FFFFFF"
              android:textSize="20sp" />
                
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            >
         <EditText
                android:id="@+id/editText3"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:layout_gravity="left" 
				android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false" 
        android:textColor="#FFFFFF">
         
            </EditText>

         <TextView
             android:id="@+id/TextView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|left"
             android:layout_marginLeft="10dp"
             android:ems="7"
             android:text="@string/fahrenheit"
             android:textColor="#FFFFFF"
             android:textSize="20sp"/>
                   
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            >
         <EditText
                android:id="@+id/editText4"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:inputType="numberDecimal"
                android:layout_gravity="left" 
                android:clickable="false" 
        android:cursorVisible="false" 
        android:focusable="false" 
        android:focusableInTouchMode="false"
        android:textColor="#FFFFFF">
              
            </EditText>

			<TextView
			    android:id="@+id/TextView3"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_gravity="bottom|left"
			    android:layout_marginLeft="10dp"
			    android:ems="5"
			    android:text="@string/kelvin"
			    android:textColor="#FFFFFF"
			    android:textSize="20sp">

            </TextView>
            		  
        </TableRow>
    </TableLayout>